syntax = "proto3";

message User {
  string id = 1;
  string name = 2;
}

service UserService {
  rpc CreateUser(User) returns (User) {}
  rpc GetUser(User) returns (User) {}
}

